--- a/style3.css
+++ b/style3.css
@@ -21,14 +21,41 @@ body {
 }
 
 img{
-    width: 25%;
-    height: 300px;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
     padding-left: 5%;
-
 }
+
+p{
+    padding-left: 5%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif ;
+    color: #7895B2;
+}
+
 
 footer {
     margin: 10%;
 
 }
 
+section {
+    display: flex;
+    justify-content: center;
+}
+
+.container-1{
+    flex-basis: 30%;
+    margin: 10px;
+
+}
+
+.container-2{
+    flex-basis: 30%;
+    margin: 10px;
+}
+
+.container-3{
+    flex-basis: 30%;
+    margin: 10px;
+}
